--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,9 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.chensoul.learning</groupId>
-        <artifactId>learning-spring-security-oauth2-boot</artifactId>
+        <groupId>com.chensoul</groupId>
+        <artifactId>learn-spring-security-oauth2-boot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -32,7 +33,6 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- jdbc token store -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
