--- a/resource-server/pom.xml
+++ b/resource-server/pom.xml
@@ -4,16 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.chensoul.learning</groupId>
-        <artifactId>learning-spring-security-oauth2-boot</artifactId>
+        <groupId>com.chensoul</groupId>
+        <artifactId>learn-spring-security-oauth2-boot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>resource-server</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.chensoul.learning</groupId>
+            <groupId>com.chensoul</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -30,10 +31,6 @@
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt</artifactId>
         </dependency>
 
         <dependency>
